<resources>
    <string name="app_name">iteration_two</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="foodintol">FoodInTol</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="add_child">Add a Child</string>
    <string name="gender">Gender</string>
    <string name="child_name">Child Name</string>
    <string name="enter_child_name">Enter your Child\'s Name</string>
    <string name="child_age">Child Age</string>
    <string name="enter_child_age">Enter your Child\'s Age</string>
    <string name="confirm">Confirm</string>
    <string name="home_child_name">Oliver</string>
    <string name="home_child_age">8 years old</string>
    <string name="food_elimination_diet">Food Elimination Diet:</string>
    <string name="food_elim_days_remaining">13 days left!</string>
    <string name="string_food_elim_item">Diary</string>
    <string name="summary_report">Summary Report:</string>
    <string name="summary_report_date">5/9/2022 - 11/9/2022</string>
    <string name="string_eczema_count">0</string>
    <string name="eczema">Eczema</string>
    <string name="string_stomach_ache">Stomach\nAche</string>
    <string name="nausea">Nausea</string>
    <string name="respiratory_problems">Respiratory\nProblems</string>
    <string name="string_respiratory_problems_count">0</string>
    <string name="string_headaches_count">0</string>
    <string name="string_nausea_count">0</string>
    <string name="string_stomache_ache_count">0</string>
    <string name="string_diarrhoea_count">0</string>
    <string name="diarrhoea">Diarrhoea</string>
    <string name="lethargic">Lethargic</string>
    <string name="string_lethargic_count">0</string>
    <string name="joint_pains">Joint Pains</string>
    <string name="string_bloating_count">0</string>
    <string name="bloating">Bloating</string>
    <string name="headaches">Headaches</string>
    <string name="string_joint_pains_count">0</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="string_today_date">11/9/2022</string>
    <string name="meals">Meals</string>
    <string name="no_meals_entered">No meals entered</string>
    <string name="add_food">Add Food</string>
    <string name="add_a_meal">Add a Meal</string>
    <string name="time">Time:</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="meal_title">Meal Title</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="symptoms">Symptoms?</string>
    <string name="select_a_time">Select a Time</string>
    <string name="string_food_elimination_item">Dairy</string>
    <string name="string_food_elimination_time">12/9/2022 - 26/9/2022</string>
    <string name="start_elimination">Start Elimination</string>
    <string name="no_data_available">No Data Available</string>
    <string name="ingredient">Ingredient</string>
    <string name="new_elimination_diet">New Elimination Diet</string>
    <string name="duration">Duration:</string>
    <string name="food_elimination_duration">14\ndays</string>
    <string name="start">Start</string>
    <string name="email_verification">Email Verification</string>
    <string name="otp_email_info">An confirmation email has been sent to your email address.\nPlease follow the instructions provided in the email to activate your account.</string>
    <string name="no_receive_email">Didn\'t receive an email?</string>
    <string name="resend_email">Resend Email</string>
    <string name="title_activity_food_intolerance_information">FoodIntoleranceInformationActivity
    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="back">Back</string>
    <string name="string_food_intolerance_item">Dairy</string>
    <string name="string_dairy_info">Lactose is a sugar found in milk and dairy products.\n\nIt is broken down in the body by an enzyme called lactase , which is necessary in order for lactose to be properly digested and absorbed.\n\nLactose intolerance is caused by a shortage of lactase enzymes, which causes an inability to digest lactose and results in digestive symptoms.</string>
    <string name="common_symptoms">Common Symptoms</string>
    <string name="common_foods">Common Foods</string>
    <string name="ingredients">Ingredients</string>
    <string name="sample_ingredients">2 large egg whites 1 pound new potatoes (about 1 inch in diameter)\n2 teaspoons kosher salt\n¾ teaspoon finely ground black pepper\n1 teaspoon finely chopped rosemary\n1 teaspoon finely chopped thyme\n1 teaspoon finely chopped parsley\n</string>
</resources>