<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_otp_background"
    tools:context=".OTPActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/light_olive_green_circle_medium">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            android:src="@drawable/otp_icon">
        </ImageView>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/email_verification"
        android:layout_gravity="center"
        android:textColor="@color/cream"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/otp_email_info"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/olive_green"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/no_receive_email"
        android:layout_gravity="center"
        android:textColor="@color/olive_green"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_resend_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/resend_email"
        android:layout_gravity="center"
        android:textColor="@color/orange"
        android:textSize="15sp"
        android:textStyle="bold"/>

</LinearLayout>