<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/olive_green"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/smooth_rectangle_cream"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/foodintol"
            android:textColor="@color/olive_green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/signin_rectangle_cream"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/user_icon_image"/>

                <EditText
                    android:id="@+id/et_sign_in_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:background="@color/transparent"
                    android:drawablePadding="12dp"
                    android:maxLines="1"
                    android:hint="@string/email"
                    android:textSize="18sp" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/signin_rectangle_cream"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/user_icon_image"/>

                <EditText
                    android:id="@+id/et_sign_in_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:background="@color/transparent"
                    android:drawablePadding="12dp"
                    android:maxLines="1"
                    android:hint="@string/password"
                    android:textSize="18sp" />

            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_password"
            android:textColor="@color/olive_green"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <RelativeLayout
            android:id="@+id/rl_sign_in"
            android:layout_width="230dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:elevation="5dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_rectangle_olive_green"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/no_account"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sign_up"
            android:textColor="@color/orange"
            android:layout_marginStart="5dp"
            android:textSize="14sp"
            android:textStyle="bold"/>


    </LinearLayout>


</LinearLayout>