<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_add_child_background"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_marginTop="30dp">

        <RelativeLayout
            android:id="@+id/rl_cancel_add_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:background="@drawable/rounded_rectangle_grey_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="12sp"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_child"
        android:textColor="@color/olive_green"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="5dp"
        android:layout_marginTop="25dp"
        android:gravity="top"
        android:background="@drawable/rounded_rectangle_dark_cream_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/gender"
                android:textColor="@color/olive_green"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/rl_select_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/grey_square">
                <!--  highlighted square is called 'orange_square -->

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/boy_icon"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_select_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/grey_square">
                <!--  highlighted square is called 'orange_square -->

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/girl_icon"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_rectangle_dark_cream_small"
        android:layout_marginTop="30dp"
        android:elevation="5dp"
        android:paddingTop="15dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/id_card_icon"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/child_name"
                android:textColor="@color/olive_green"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_rectangle_white_small">

            <EditText
                android:id="@+id/et_add_child_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background='@null'
                android:gravity="center"
                android:hint="@string/enter_child_name"
                android:maxLines="1"
                android:textSize="16sp" />

        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_rectangle_dark_cream_small"
        android:layout_marginTop="30dp"
        android:elevation="5dp"
        android:paddingTop="15dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/toys_icon"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/child_age"
                android:textColor="@color/olive_green"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_rectangle_white_small">

            <EditText
                android:id="@+id/et_add_child_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background='@null'
                android:gravity="center"
                android:hint="@string/enter_child_age"
                android:maxLines="1"
                android:textSize="16sp" />

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <RelativeLayout
            android:id="@+id/rl_add_child_confirm"
            android:layout_width="220dp"
            android:layout_gravity="center"
            android:layout_height="45dp"
            android:layout_marginTop="45dp"
            android:elevation="5dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_rectangle_orange"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>